fixed padding on mobile size project section and made the wrapper wider

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -88,6 +88,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+
+    .textContainer{
+      padding: 0;
+    }
   }
 
   .projectImg{
@@ -96,7 +100,7 @@
   }
 
   .wrapper{
-    width: 80%;
+    width: 100%;
   }
 }
 
